FixErrorAndSchema